Bug 993753 - Don't set media decoders idle while seeking. r=kinetik